--- a/ht_invoice_report/report/invoice_report.xml
+++ b/ht_invoice_report/report/invoice_report.xml
@@ -73,47 +73,53 @@
                 </div>
                 <br/>
                 <br/>
-                <table name="invoice_line_table" style="width: 100%">
-                    <thead>
-                        <tr style="background-color: #363636; color: #fff">
-                            <th class="text-right" style="border-left: 1px solid black; border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>CANTIDAD</span></th>
-                            <th class="text-left" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>DESCRIPTION</span></th>
-                            <th class="text-right" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>PRECIO UNITARIO</span></th>
-                            <th class="text-right" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>DESCUENTOS Y REBAJAS OTORGADOS</span></th>
-                            <th class="text-right" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>TOTAL</span></th>
-                        </tr>
-                    </thead>
-                    <tbody class="invoice_tbody">
-                        <t t-set="total_discount" t-value="0"/>
-                        <t t-set="sub_discount" t-value="0"/>
-                        <t t-foreach="o.invoice_line_ids" t-as="line">
-                            <t t-set="sub_discount" t-value="((line.quantity * line.price_unit) - (line.price_subtotal)) / ((line.quantity * line.price_unit) / 100)"/>
-                            <t t-set="total_discount" t-value="total_discount + sub_discount"/>
-                            <tr>
-                                <td class="text-right" style="border-left: 1px solid black; border-bottom: 1px solid black; border-right: 1px solid black;"><span t-field="line.quantity"/></td>
-                                <td class="text-left" style="border-bottom: 1px solid black; border-right: 1px solid black; "><span t-field="line.name"/></td>
-                                <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black; "><span t-field="line.price_unit"/></td>
-                                <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black; "><span t-esc="'%.2f'% sub_discount"/></td>
-                                <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black;"><span t-field="line.price_subtotal"/></td>
-                            </tr>
-                        </t>
-                        <tr>
-                            <td style="border-right: none; border-bottom: none"> </td>
-                            <td style="border-right: none; border-bottom: none"> </td>
-                            <td class="text-right" style="border-left: 1px solid black; border-bottom: 1px solid black; border-right: 1px solid black;"><strong><span>TOTAL</span></strong></td>
-                            <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black;"><strong><span t-esc="'%.2f'% total_discount"/></strong></td>
-                            <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black;"><strong><span t-field="o.amount_untaxed"/></strong></td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="row">
+                    <div class="col-6" >
+
+                        <table name="invoice_line_table" style="width: 100%">
+                            <thead>
+                                <tr style="background-color: #363636; color: #fff">
+                                    <th class="text-right" style="border-left: 1px solid black; border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>CANTIDAD</span></th>
+                                    <th class="text-left" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>DESCRIPTION</span></th>
+                                    <th class="text-right" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>PRECIO UNITARIO</span></th>
+                                    <th class="text-right" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>DESCUENTOS Y REBAJAS OTORGADOS</span></th>
+                                    <th class="text-right" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><span>TOTAL</span></th>
+                                </tr>
+                            </thead>
+                            <tbody class="invoice_tbody">
+                                <t t-set="total_discount" t-value="0"/>
+                                <t t-set="sub_discount" t-value="0"/>
+                                <t t-foreach="o.invoice_line_ids" t-as="line">
+                                    <t t-set="sub_discount" t-value="((line.quantity * line.price_unit) - (line.price_subtotal)) / ((line.quantity * line.price_unit) / 100)"/>
+                                    <t t-set="total_discount" t-value="total_discount + sub_discount"/>
+                                    <tr>
+                                        <td class="text-right" style="border-left: 1px solid black; border-bottom: 1px solid black; border-right: 1px solid black;"><span t-field="line.quantity"/></td>
+                                        <td class="text-left" style="border-bottom: 1px solid black; border-right: 1px solid black; "><span t-field="line.name"/></td>
+                                        <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black; "><span t-field="line.price_unit"/></td>
+                                        <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black; "><span t-esc="'%.2f'% sub_discount"/></td>
+                                        <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black;"><span t-field="line.price_subtotal"/></td>
+                                    </tr>
+                                </t>
+                                <tr>
+                                    <td style="border-right: none; border-bottom: none"> </td>
+                                    <td style="border-right: none; border-bottom: none"> </td>
+                                    <td class="text-right" style="border-left: 1px solid black; border-bottom: 1px solid black; border-right: 1px solid black;"><strong><span>TOTAL</span></strong></td>
+                                    <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black;"><strong><span t-esc="'%.2f'% total_discount"/></strong></td>
+                                    <td class="text-right" style="border-bottom: 1px solid black; border-right: 1px solid black;"><strong><span t-field="o.amount_untaxed"/></strong></td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
                 <br/>
                 <br/>
                 <div class="row">
-                    <div class="col-6" style="border-left: 1px solid black; border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black; background-color: #abb0ad">
-                        <div>
+                    <div class="col-6" >
+                        <div style="border-left: 1px solid black; border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black; background-color: #abb0ad">
                             <strong><span>VALOR EN LETRAS:</span></strong>
                         </div>
-                        <div>
+                        <div style="border-left: 1px solid black; border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black; background-color: #abb0ad">
                             <span t-esc="o.currency_id.amount_to_text(o.amount_total)"/>
                         </div>
                     </div>
@@ -222,7 +228,7 @@
                 model="account.move"
                 name="ht_invoice_report.custom_report_invoice_main"
                 string="Print Invoice"
-                report_type="qweb-pdf"
+                report_type="qweb-html"
                 multi="False"
         />
     </data>
