--- a/ht_invoice_report/report/invoice_report.xml
+++ b/ht_invoice_report/report/invoice_report.xml
@@ -43,8 +43,8 @@
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-12">
-                        <div class="row ">
+                    <div class="col-12" >
+                        <div class="row " style="margin-left:15px; margin-right:15px">
                             <div class="col-2" style="width: 100%; font-size: 13px; border-left: 1px solid black; border-top: 1px solid black; border-bottom: 1px solid black; background-color: #363636; color: #fff">
                                 <span>CLIENTE:</span>
                             </div>
