--- a/ht_invoice_report/report/invoice_report.xml
+++ b/ht_invoice_report/report/invoice_report.xml
@@ -3,7 +3,8 @@
     <data>
         <template id="custom_report_invoice_document">
             <div class="page" style="padding:0; font-family: TimesNewRoman; font-size: 12px;">
-
+                <br/>
+                <br/>
                 <div class="row ">
                     <div class="col-12" >
                         <div class="row " style="margin-left:0px; margin-right:0px">
@@ -159,7 +160,7 @@
                                 <tr>
                                     <th><span>TOTAL A PAGAR L</span></th>
                                     <th style="border-left: 1px solid black; border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black; background-color: #abb0ad">
-<!--                                        <span>TOTAL A PAGAR L</span>-->
+                                        <span t-field="o.amount_total"/>
                                     </th>
                                 </tr>
                             </thead>
@@ -182,7 +183,7 @@
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-set="lang" t-value="o.invoice_user_id.sudo().lang"/>
-                    <div class="header">
+                    <div class="header"  style="padding:0; font-family: TimesNewRoman; font-size: 12px;">
                         <div class="row mb8">
                             <div class="col-3">
                                 <img t-if="res_company.logo" t-att-src="'data:image/png;base64,%s' % to_text(res_company.logo)" style="max-height: 90px;"/>
@@ -190,7 +191,14 @@
                             <div class="col-6"/>
                             <div class="col-3">
                                 <div>
-                                    <b><span>FACTURA</span></b>
+                                    <b>
+                                        <span t-if="o.move_type == 'out_invoice' and o.state == 'posted'">FACTURA</span>
+                                        <span t-if="o.move_type == 'out_invoice' and o.state == 'draft'">Proyecto de factura</span>
+                                        <span t-if="o.move_type == 'out_invoice' and o.state == 'cancel'">Factura cancelada</span>
+                                        <span t-if="o.move_type == 'out_refund'">Nota de crédito</span>
+                                        <span t-if="o.move_type == 'in_refund'">Nota de crédito del proveedor</span>
+                                        <span t-if="o.move_type == 'in_invoice'">Factura del proveedor</span>
+                                    </b>
                                 </div>
                                 <div>
                                     <span t-field="o.name"/>
@@ -201,7 +209,7 @@
                             <div class="col-5" style="text-align: left">
                                 <strong><span t-field="o.company_id.name"/></strong>
                                 <br/>
-                                <strong>GSTIN: <span t-field="o.company_id.vat"/></strong>
+                                <strong>Número de impuesto: <span t-field="o.company_id.vat"/></strong>
                                 <br/>
                                 <span t-if="o.company_id.street" t-field="o.company_id.street"/>
                                 <br/>
@@ -213,9 +221,9 @@
                                 <br/>
                                 <span t-if="o.company_id.country_id.name" t-field="o.company_id.country_id.name"/>
                                 <br/>
-                                <strong>Email:</strong><span t-field="o.company_id.email"/>
+                                <strong>Correo electrónico:</strong><span t-field="o.company_id.email"/>
                                 <br/>
-                                <strong>Phone:</strong><span t-field="o.company_id.phone"/>
+                                <strong>Teléfono:</strong><span t-field="o.company_id.phone"/>
                             </div>
                             <div class="col-4"></div>
                             <div class="col-3">
