--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -343,7 +343,7 @@
                 <t t-out="0"/>
             </div>
 
-            <div t-attf-class="footer o_standard_footer o_company_#{company.id}_layout"  style="border-top: 1px solid blue;">
+            <div t-attf-class="footer o_standard_footer o_company_#{company.id}_layout"  style="border-top: 1px solid #3bebff;">
                 <div class="text-center">
                     <ul class="list-inline mb4">
 
@@ -398,7 +398,7 @@
                 <t t-out="0"/>
             </div>
 
-            <div t-attf-class="o_company_#{company.id}_layout footer o_background_footer"  style="border-top: 1px solid blue;">
+            <div t-attf-class="o_company_#{company.id}_layout footer o_background_footer"  style="border-top: 1px solid #3bebff;">
                 <div class="text-center">
                     <ul class="list-inline">
                         <div t-field="company.report_footer"/>
@@ -438,7 +438,7 @@
                 <t t-out="0"/>
             </div>
 
-            <div t-attf-class="footer o_boxed_footer o_company_#{company.id}_layout"  style="border-top: 1px solid blue;">
+            <div t-attf-class="footer o_boxed_footer o_company_#{company.id}_layout"  style="border-top: 1px solid #3bebff;">
                 <div class="text-center">
                     <div t-field="company.report_footer"/>
                     <div t-if="report_type == 'pdf'">
@@ -477,7 +477,7 @@
                 <t t-out="0"/>
             </div>
 
-            <div t-attf-class="footer o_clean_footer o_company_#{company.id}_layout" style="border-top: 1px solid blue;">
+            <div t-attf-class="footer o_clean_footer o_company_#{company.id}_layout" style="border-top: 1px solid #3bebff;">
                 <div class="row">
                     <div class="col-4">
                         <span t-field="company.report_footer"/>
@@ -489,8 +489,8 @@
                         <h5 class="mt0 mb0" t-field="company.report_header"/>
                     </div>
                     <div class="col-1">
-                        <ul t-if="report_type == 'pdf'" class="list-inline pagenumber float-right text-center">
-                            <li class="list-inline-item"><strong><span class="page"/></strong></li>
+                        <ul t-if="report_type == 'pdf'" class="list-inline pagenumber float-right text-center" style="border-color: #3bebff !important">
+                            <li class="list-inline-item" style="nackground: #3bebff !important; color: black"><strong><span class="page"/></strong></li>
                         </ul>
                     </div>
                 </div>
