--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -490,7 +490,7 @@
                     </div>
                     <div class="col-1">
                         <ul t-if="report_type == 'pdf'" class="list-inline pagenumber float-right text-center" style="border-color: #3bebff !important">
-                            <li class="list-inline-item" style="nackground: #3bebff !important; color: black"><strong><span class="page"/></strong></li>
+                            <li class="list-inline-item" style="background: #3bebff !important; color: black"><strong><span class="page"/></strong></li>
                         </ul>
                     </div>
                 </div>
